<resources>
    <string name="app_name">Admin app</string>
    <string name="chdr">CHDR</string>
    <string name="special_notice">Special Notice</string>
    <string name="blog">Blog</string>
    <string name="help_center">Help Center</string>
    <string name="background">Background</string>
    <string name="baby_care">Baby Care</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
    <string name="child_health_development_report">Child Health Development Report</string>
    <string name="immunization_record">Immunization Record</string>
    <string name="mid_wife_can_add_to_immunization_records_to_the_application">Mid-wife can add to Immunization Records to the Application</string>
    <string name="logo">logo</string>
</resources>